--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "1.2.5",
-    "@ai-sdk/ui-utils": "1.1.19",
     "@ai-sdk/react": "1.1.23",
+    "@ai-sdk/ui-utils": "1.1.19",
     "ai": "4.1.61",
+    "axios": "^1.8.3",
     "next": "latest",
-    "openai": "4.52.6",
+    "openai": "^4.52.6",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "9.0.1",
